--- a/style.css
+++ b/style.css
@@ -86,3 +86,10 @@ legend{
 #submit:hover{
     background-image:linear-gradient(45deg, #007e80,#00b9bd)
 }
+
+@media (max-width:1124px){
+    .box{
+        width: 350px;
+    }
+}
+
